--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~13.1.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "ngx-pagination": "^6.0.1",
     "ngx-spinner": "^13.1.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
